# NitroSnap

./: README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/settings/: page.tsx
components/: AppVersion.tsx  BoostConfig.tsx  BoostOption.tsx  TitleBar.tsx
components/ui/: toast.tsx
lib/: hooks.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  window_style.rs
